--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,11 +1,15 @@
 [uwsgi]
 chdir = /home/syz/E_mall/e_mall
-module = mblog.wsgi:application
-socket = 127.0.0.1:8008
+module = e_mall.wsgi:application
+http-socket = 127.0.0.1:8002
 master = true
 processes = 4
-threads = 4
-daemonize = /home/syz/E_mall/e_mall/run.log
+threads = 8
+# daemonize = /home/syz/E_mall/e_mall/run.log
+# 使用supervisor时注释掉
+buffer-size = 65536
 disable-logging = true
 wsgi-file = /home/syz/E_mall/e_mall/e_mall/wsgi.py
 pidfile = /home/syz/E_mall/e_mall/uwsgi.pid
+
+plugins = python
