1.新增第三方qq和wx的model 2.即将对接第三方登录

--- a/uwsgi-slave.ini
+++ b/uwsgi-slave.ini
@@ -1,6 +1,6 @@
 [uwsgi]
-chdir = /home/syz/E_mall/e_mall
-module = e_mall.wsgi:application
+chdir = /home/syz/E_mall/Django-Mall
+module = Emall.wsgi:application
 socket = 127.0.0.1:8004
 master = true
 processes = 4
@@ -9,7 +9,7 @@ threads = 8
 # 使用supervisor时注释掉
 buffer-size = 65536
 disable-logging = true
-wsgi-file = /home/syz/E_mall/e_mall/e_mall/wsgi.py
-pidfile = /home/syz/E_mall/e_mall/uwsgi-slave.pid
+wsgi-file = /home/syz/E_mall/Django-Mall/Emall/wsgi.py
+pidfile = /home/syz/E_mall/Django-Mall/uwsgi-slave.pid
 
 plugins = python
